[gd_scene load_steps=6 format=3 uid="uid://cwpysaabasg03"]

[ext_resource type="Script" uid="uid://dhjrko6ngb2g5" path="res://Scenes/Arena/Arena.gd" id="1_4f205"]
[ext_resource type="PackedScene" uid="uid://c1t1nywkhjtl2" path="res://Scenes/UI/ArenaUI.tscn" id="5_4f205"]
[ext_resource type="Script" uid="uid://36wslyrssn18" path="res://Scenes/Arena/SoundHandler.gd" id="5_bugre"]
[ext_resource type="AudioStream" uid="uid://bhx376raoawn0" path="res://Ressources/Musics/Effect/Score sound.wav" id="7_0ds76"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pyk7t"]
size = Vector2(32, 768)

[node name="Arena" type="Node2D"]
script = ExtResource("1_4f205")

[node name="MapHandler" type="Node2D" parent="."]

[node name="PadleList" type="Node2D" parent="."]

[node name="BallList" type="Node2D" parent="."]

[node name="GoalsList" type="Node2D" parent="."]

[node name="LeftGoal" type="Area2D" parent="GoalsList"]
position = Vector2(-16, 384)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalsList/LeftGoal"]
shape = SubResource("RectangleShape2D_pyk7t")

[node name="RightGoal" type="Area2D" parent="GoalsList"]
position = Vector2(1296, 384)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalsList/RightGoal"]
shape = SubResource("RectangleShape2D_pyk7t")

[node name="SoundHander" type="Node" parent="."]
script = ExtResource("5_bugre")

[node name="SoundScore" type="AudioStreamPlayer" parent="SoundHander"]
stream = ExtResource("7_0ds76")

[node name="ArenaUI" parent="." instance=ExtResource("5_4f205")]

[connection signal="body_entered" from="GoalsList/LeftGoal" to="." method="goalLeft"]
[connection signal="body_entered" from="GoalsList/RightGoal" to="." method="goalRight"]
[connection signal="replay" from="ArenaUI" to="." method="replay"]
[connection signal="toMenu" from="ArenaUI" to="." method="_on_ui_to_menu"]
